style(gateway): Use consistent DTO name practice
