# service-gateway/src/main/java/com/github/lambda/gateway/swagger/model/ProductDTO.java
@@ -3,12 +3,8 @@ package com.github.lambda.gateway.swagger.model;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.github.lambda.gateway.swagger.model.ProductItemDTO;
-import com.github.lambda.gateway.swagger.model.ProductOptionDTO;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.util.ArrayList;
-import java.util.List;
 import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
 import javax.validation.constraints.*;
@@ -29,56 +25,264 @@ import lombok.ToString;
 @Validated
 
 public class ProductDTO   {
-  @JsonProperty(value = "item")
-  private ProductItemDTO item;
+  @JsonProperty(value = "id")
+  private Long id;
 
-  @JsonProperty(value = "options")
-  @Valid
-  @Builder.Default
-  private List<ProductOptionDTO> options = new ArrayList<>();
+  @JsonProperty(value = "createdAt")
+  private Long createdAt;
+
+  @JsonProperty(value = "updatedAt")
+  private Long updatedAt;
+
+  @JsonProperty(value = "name")
+  private String name;
+
+  @JsonProperty(value = "price")
+  private Long price;
+
+  @JsonProperty(value = "description")
+  private String description;
+
+  @JsonProperty(value = "onSale")
+  private String onSale;
+
+  @JsonProperty(value = "categoryId")
+  private Long categoryId;
+
+  @JsonProperty(value = "categoryDisplayName")
+  private String categoryDisplayName;
+
+  @JsonProperty(value = "categoryPath")
+  private String categoryPath;
+
+  @JsonProperty(value = "imageId")
+  private Long imageId;
+
+  @JsonProperty(value = "imageType")
+  private String imageType;
+
+  @JsonProperty(value = "imagePath")
+  private String imagePath;
 
 
 
   /**
-   * Get item
-   * @return item
+   * Get id
+   * @return id
   **/
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public ProductItemDTO getItem() {
-    return item;
+  public Long getId() {
+    return id;
   }
 
-  public void setItem(ProductItemDTO item) {
-    this.item = item;
+  public void setId(Long id) {
+    this.id = id;
   }
 
 
-
-  public ProductDTO addOptionsItem(ProductOptionDTO optionsItem) {
-    if (this.options == null) {
-      this.options = new ArrayList<>();
-    }
-    this.options.add(optionsItem);
-    return this;
-  }
 
   /**
-   * Get options
-   * @return options
+   * Get createdAt
+   * @return createdAt
   **/
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public List<ProductOptionDTO> getOptions() {
-    return options;
+  public Long getCreatedAt() {
+    return createdAt;
   }
 
-  public void setOptions(List<ProductOptionDTO> options) {
-    this.options = options;
+  public void setCreatedAt(Long createdAt) {
+    this.createdAt = createdAt;
+  }
+
+
+
+  /**
+   * Get updatedAt
+   * @return updatedAt
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Long getUpdatedAt() {
+    return updatedAt;
+  }
+
+  public void setUpdatedAt(Long updatedAt) {
+    this.updatedAt = updatedAt;
+  }
+
+
+
+  /**
+   * Get name
+   * @return name
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+
+
+  /**
+   * Get price
+   * @return price
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Long getPrice() {
+    return price;
+  }
+
+  public void setPrice(Long price) {
+    this.price = price;
+  }
+
+
+
+  /**
+   * Get description
+   * @return description
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getDescription() {
+    return description;
+  }
+
+  public void setDescription(String description) {
+    this.description = description;
+  }
+
+
+
+  /**
+   * Get onSale
+   * @return onSale
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getOnSale() {
+    return onSale;
+  }
+
+  public void setOnSale(String onSale) {
+    this.onSale = onSale;
+  }
+
+
+
+  /**
+   * Get categoryId
+   * @return categoryId
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Long getCategoryId() {
+    return categoryId;
+  }
+
+  public void setCategoryId(Long categoryId) {
+    this.categoryId = categoryId;
+  }
+
+
+
+  /**
+   * Get categoryDisplayName
+   * @return categoryDisplayName
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getCategoryDisplayName() {
+    return categoryDisplayName;
+  }
+
+  public void setCategoryDisplayName(String categoryDisplayName) {
+    this.categoryDisplayName = categoryDisplayName;
+  }
+
+
+
+  /**
+   * Get categoryPath
+   * @return categoryPath
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getCategoryPath() {
+    return categoryPath;
+  }
+
+  public void setCategoryPath(String categoryPath) {
+    this.categoryPath = categoryPath;
+  }
+
+
+
+  /**
+   * Get imageId
+   * @return imageId
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Long getImageId() {
+    return imageId;
+  }
+
+  public void setImageId(Long imageId) {
+    this.imageId = imageId;
+  }
+
+
+
+  /**
+   * Get imageType
+   * @return imageType
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getImageType() {
+    return imageType;
+  }
+
+  public void setImageType(String imageType) {
+    this.imageType = imageType;
+  }
+
+
+
+  /**
+   * Get imagePath
+   * @return imagePath
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getImagePath() {
+    return imagePath;
+  }
+
+  public void setImagePath(String imagePath) {
+    this.imagePath = imagePath;
   }
 
 
